<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hatter"
    tools:context=".Activityk.BejelentkezesActivity">

    <ScrollView
        android:id="@+id/bejelentkezesGorgetes"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/bejelentkezesGorgetesAlap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/dp30"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10" >

            <ImageView
                android:id="@+id/bejelentkezesNagyLogo"
                android:layout_width="wrap_content"
                android:layout_height="320dp"
                android:src="@drawable/nagylogo"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:contentDescription="@string/nagylogo" />

            <LinearLayout
                android:id="@+id/bejelentkezesRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="@drawable/card_backg" >

                <EditText
                    android:id="@+id/bejelentkezesEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp15"
                    android:layout_marginEnd="@dimen/dp15"
                    android:layout_marginBottom="@dimen/dp5"
                    android:layout_marginTop="@dimen/dp15"
                    android:textSize="20sp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/feher"
                    android:textColorHint="@color/feher"
                    android:backgroundTint="@color/feher"
                    android:autofillHints="emailAddress" />

                <EditText
                    android:id="@+id/bejelentkezesEditTextJelszo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp15"
                    android:layout_marginEnd="@dimen/dp15"
                    android:layout_marginBottom="@dimen/dp25"
                    android:textSize="20sp"
                    android:hint="@string/jelszo"
                    android:inputType="textPassword"
                    android:textColor="@color/feher"
                    android:textColorHint="@color/feher"
                    android:backgroundTint="@color/feher"
                    android:autofillHints="password" />

                <Button
                    android:id="@+id/bejelentkezesEmailGomb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp30"
                    android:layout_marginEnd="@dimen/dp30"
                    android:layout_marginBottom="@dimen/dp15"
                    android:textSize="16sp"
                    android:onClick="bejelentkezes"
                    android:text="@string/bejelentkezes"
                    android:background="@drawable/gomb_backg"
                    android:textColor="@color/feher" />

                <Button
                    android:id="@+id/bejelentkezesGoogleGomb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp30"
                    android:layout_marginEnd="@dimen/dp30"
                    android:layout_marginBottom="@dimen/dp15"
                    android:textSize="16sp"
                    android:onClick="bejelentkezesGoogle"
                    android:text="@string/bejelentkezes_google"
                    android:background="@drawable/gomb_backg"
                    android:textColor="@color/feher" />

                <Button
                    android:id="@+id/bejelentkezesVendegGomb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp30"
                    android:layout_marginEnd="@dimen/dp30"
                    android:layout_marginBottom="@dimen/dp30"
                    android:textSize="16sp"
                    android:onClick="bejelentkezesVendeg"
                    android:text="@string/bejelentkezes_vendeg"
                    android:background="@drawable/gomb_backg"
                    android:textColor="@color/feher" />

                <Button
                    android:id="@+id/regisztacioGomb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp30"
                    android:layout_marginEnd="@dimen/dp30"
                    android:layout_marginBottom="@dimen/dp20"
                    android:textSize="16sp"
                    android:onClick="regisztracio"
                    android:text="@string/regisztracio"
                    android:background="@drawable/gomb_backg"
                    android:textColor="@color/feher" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>