<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hatter"
    tools:context=".Activityk.KezdolapActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/felsoNavAlap"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/fekete"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/kisLogo"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/kislogo" />

        <ImageButton
            android:id="@+id/kijelentkezesImageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/dp10"
            android:background="@color/atlatszo"
            android:contentDescription="@string/kijelentkezes"
            android:onClick="kijelentkezes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/kijelentkezes_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/kezdolapGorgetes"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <LinearLayout
            android:id="@+id/gorgetesAlap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:orientation="vertical"
            android:gravity="center" >

            <ImageView
                android:id="@+id/nagyLogo"
                android:layout_width="wrap_content"
                android:layout_height="320dp"
                android:layout_marginTop="-100px"
                android:src="@drawable/nagylogo"
                android:contentDescription="@string/nagylogo" />

            <TextView
                android:id="@+id/kezdolaph2TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_marginBottom="50dp"
                android:text="@string/kezdolap_h2"
                android:textAlignment="center"
                android:textColor="@color/feher"
                android:textSize="24sp" />

            <RelativeLayout
                android:id="@+id/arainkAlap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:background="@drawable/card_backg" >

                <TextView
                    android:id="@+id/arainkCim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:text="@string/araink"
                    android:textAlignment="center"
                    android:textColor="@color/feher"
                    android:textSize="26sp" />

                <ImageView
                    android:id="@+id/araink"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginStart="@dimen/dp15"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="@dimen/dp15"
                    android:layout_marginBottom="@dimen/dp15"
                    android:src="@drawable/arak"
                    android:contentDescription="@string/araink" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/programokAlap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="120dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/card_backg" >

                <TextView
                    android:id="@+id/programokCim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:text="@string/programok"
                    android:textAlignment="center"
                    android:textColor="@color/feher"
                    android:textSize="26sp" />

                <ImageView
                    android:id="@+id/programok"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginStart="@dimen/dp15"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="@dimen/dp15"
                    android:layout_marginBottom="@dimen/dp15"
                    android:src="@drawable/program"
                    android:contentDescription="@string/programok" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/alsoNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/dp15"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginEnd="@dimen/dp15"
        android:layout_marginBottom="@dimen/dp15"
        android:background="@drawable/bot_nav_back"
        app:itemIconSize="@dimen/dp30"
        app:itemIconTint="@drawable/item_kijeloles"
        app:itemRippleColor="@color/atlatszo"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/also_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>